kube/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
  labels:
    app.kubernetes.io/name: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: portfolio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: portfolio
    spec:
      containers:
        - name: portfolio
          image: hmei28/portfolio:latest
          command:
            - bash
            - -c
            - gunicorn --bind 0.0.0.0:8000 portfolio.wsgi
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /app/medias
              name: portfolio-data
              subPath: medias

      volumes:
      - name: portfolio-data
        persistentVolumeClaim:
          claimName: portfolio
