kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: portfolio
